Ajout des linter js et css

--- a/src/modules/module-test/module-test.ejs
+++ b/src/modules/module-test/module-test.ejs
@@ -3,7 +3,7 @@
 <div>
   <a href="index.html">Go back to index</a>
   Hello, world from module test !
-  <img src="/assets/images/test.jpg">
+  <img src="<%= htmlWebpackPlugin.options.assetsPath %>images/test.jpg">
 </div>
 
 <%= require('../../components/footer.ejs')() %>
