--- a/src/modules/module-test/module-test.ejs
+++ b/src/modules/module-test/module-test.ejs
@@ -1,4 +1,4 @@
-<%= require('../../components/header.ejs')({title: 'Module test'}) %>
+<%= require('../../parts/header.ejs')({title: 'Module test'}) %>
 
 <div>
   <a href="index.html">Go back to index</a>
@@ -6,4 +6,4 @@
   <img src="<%= htmlWebpackPlugin.options.assetsPath %>images/test.jpg">
 </div>
 
-<%= require('../../components/footer.ejs')() %>
+<%= require('../../parts/footer.ejs')() %>
