modification de la structure pour la rendre plus lisible

--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -1,4 +1,4 @@
-<%= require('../../parts/header.ejs')({title: 'Home'}) %>
+<%= require('../../core/parts/header.ejs')({title: 'Home'}) %>
 
 <div>
 	<a href="module-test.html">Go to module test</a>
@@ -11,4 +11,4 @@
 	<% } %>
 </div>
 
-<%= require('../../parts/footer.ejs')() %>
+<%= require('../../core/parts/footer.ejs')() %>
