--- a/src/pages/page-test/page-test.ejs
+++ b/src/pages/page-test/page-test.ejs
@@ -1,4 +1,4 @@
-<%= require('../../parts/header.ejs')({title: 'Module test'}) %>
+<%= require('../../core/parts/header.ejs')({title: 'Module test'}) %>
 
 <div>
   <a href="index.html">Go back to index</a>
@@ -6,4 +6,4 @@
   <img src="<%= htmlWebpackPlugin.options.assetsPath %>images/test.jpg">
 </div>
 
-<%= require('../../parts/footer.ejs')() %>
+<%= require('../../core/parts/footer.ejs')() %>
