component question fonctionnel imparfait

--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -10,6 +10,12 @@
 		<button rightAwnser>Autre bonne réponse</button>
 	</app-question>
 
+	<app-question id="q-test2" ifRight="q-test1" ifWrong="l-test1" hidden>
+		<p>Ma question 2 ?</p>
+		<button rightAwnser>Bonne réponse questi</button>
+		<button wrongAwnser>Mauvaise réponse</button>
+	</app-question>
+
 </div>
 
 <%= require('../../core/parts/footer.ejs')() %>
