--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -1,7 +1,9 @@
 <%= require('../../core/parts/header.ejs')({title: 'Home'}) %>
 
 <div>
-	<a href="module-test.html">Go to module test</a>
+	<a href="page-test.html">Go to page test</a>
+
+	<p id="test">Add rover the dog</p>
 
 	<app-question id="q-test" ifRight="q-test2" ifWrong="l-test1">
 		<p>Ma question ?</p>
