element utilisé dans html

--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -3,7 +3,7 @@
 <div>
 	<a href="page-test.html">Go to page test</a>
 
-	<p id="test">Add rover the dog</p>
+	<p id="test" onclick="RoverXpDog.addRover()">Add rover the dog</p>
 
 	<app-question id="q-test" ifRight="q-test2" ifWrong="l-test1">
 		<p>Ma question ?</p>
