--- a/src/pages/index/elements/rover-xp-dog/rover-xp-dog.scss
+++ b/src/pages/index/elements/rover-xp-dog/rover-xp-dog.scss
@@ -1,3 +1,9 @@
-p {
-	color: blue;
+@import '../../../../core/scss/constants';
+
+.rover {
+  background-color: red;
+
+  p {
+    color: orange;
+  }
 }
