utilisation de ejs pour component

--- a/src/pages/index/elements/rover-xp-dog/rover-xp-dog.scss
+++ b/src/pages/index/elements/rover-xp-dog/rover-xp-dog.scss
@@ -1,9 +1,9 @@
 @import '../../../../core/scss/constants';
 
 .rover-xp-dog {
-  background-color: red;
+  background-color: black;
 
   p {
-    color: orange;
+    color: red;
   }
 }
