--- a/src/shared/custom-elements/window/window.ejs
+++ b/src/shared/custom-elements/window/window.ejs
@@ -1,1 +1,4 @@
-<p>Appendded from ejs window template file</p>
+<div class="toolbar">
+    <p>I'm the toolbar !</p>
+</div>
+<div class="content"><!-- To be replaced by input content --></div>
