--- a/src/shared/custom-elements/window/window.ejs
+++ b/src/shared/custom-elements/window/window.ejs
@@ -1,4 +1,25 @@
-<div class="toolbar">
-    <p>I'm the toolbar !</p>
+<div class="title-bar">
+    <p class="title">Le nom de la fenêtre<!-- To be replaced by input content --></p>
+    <div class="controls">
+        <div class="minimize">
+            <div class="symbol"></div>
+        </div>
+        <div class="maximize">
+            <div class="symbol"></div>
+        </div>
+        <div class="close">
+            <div class="symbol"></div>
+        </div>
+    </div>
 </div>
-<div class="content"><!-- To be replaced by input content --></div>
+
+<div class="menu-bar"><span>File</span><span>Edit</span><span>View</span><span>Help</span></div>
+
+<div class="content-container">
+    <div class="content"><!-- To be replaced by input content --></div>
+    <div class="scroll">
+        <div class="start"></div>
+        <div class="progress"></div>
+        <div class="end"></div>
+    </div>
+</div>
