--- a/src/shared/custom-elements/window/window.ejs
+++ b/src/shared/custom-elements/window/window.ejs
@@ -1,15 +1,15 @@
 <div class="title-bar">
     <p class="title">Le nom de la fenêtre<!-- To be replaced by input content --></p>
     <div class="controls">
-        <div class="minimize">
-            <div class="symbol"></div>
-        </div>
-        <div class="maximize">
-            <div class="symbol"></div>
-        </div>
-        <div class="close">
-            <div class="symbol"></div>
-        </div>
+        <button class="control">
+            _
+        </button>
+        <button class="control">
+            X
+        </button>
+        <button class="control">
+            U
+        </button>
     </div>
 </div>
 
