--- a/src/shared/custom-elements/window/window.scss
+++ b/src/shared/custom-elements/window/window.scss
@@ -53,22 +53,25 @@ app-window {
   .title-bar {
     display: inline-grid;
     grid-auto-flow: column;
+    justify-content: space-between;
+    align-content: center;
+    grid-gap: 30px;
     color: $base;
     background-color: $blue;
     padding: $base-pad;
     height: 30px;
 
     .title {
-      width: 50px;
+      font-weight: bold;
+      margin: 0;
+      align-self: center;
     }
 
     .controls {
       display: inline-grid;
       grid-auto-flow: column;
 
-      .minimize,
-      .maximize,
-      .close {
+      .control {
         width: 26px;
         height: 22px;
         background-color: $base;
@@ -79,42 +82,6 @@ app-window {
         cursor: pointer;
 
         @include hover-reverse;
-      }
-
-      .minimize {
-        align-items: flex-end;
-
-        .symbol {
-          width: 60%;
-          height: 3px;
-          background-color: $default;
-          margin-bottom: 2px;
-        }
-      }
-
-      .maximize .symbol {
-        width: 70%;
-        height: 80%;
-        border: 2px solid $default;
-        border-top-width: 4px;
-      }
-
-      .close .symbol {
-        width: 70%;
-        height: 3px;
-        background-color: $default;
-        transform: rotate(45deg);
-
-        &::after {
-          content: "";
-          top: 0;
-          left: 0;
-          position: absolute;
-          width: 100%;
-          height: 3px;
-          background-color: $default;
-          transform: rotate(90deg);
-        }
       }
     }
   }
@@ -138,21 +105,12 @@ app-window {
   .content-container {
     @include full-reverse(2px);
 
-    .content {
-      display: inline-grid;
-      height: 260px;
-
-      .main,
-      .scroll-left {
-        height: 100%;
-      }
-
-      .main {
-        width: calc(100% - 26px);
-      }
-    }
+    display: inline-grid;
+    grid-template-columns: 1fr 26px;
+    min-height: 250px;
   }
 
+  // TODO
   .scroll {
     width: 26px;
     background-color: $base-100;
