--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,6 +1,11 @@
 @import '../../core/scss/styles';
 @import '../../core/scss/constants';
 
-html {
-  background-color: white;
+canvas {
+  width: 100% !important;
+  height: 100% !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
