--- a/src/pages/forms/elements/rover-xp-dog/rover-xp-dog.ejs
+++ b/src/pages/forms/elements/rover-xp-dog/rover-xp-dog.ejs
@@ -1,2 +1,2 @@
 <p>I'm imported with webpack rover html</p>
-<img src="<%= builtAssetsPath %>images/rover-xp-dog.gif">
+<img src="<%= assetsUrl %>images/rover-xp-dog.gif">
