snoopavision randomly placed

--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -1,4 +1,6 @@
 <%= require('../../core/parts/header.ejs')({title: 'Home'}) %>
   <a href="forms.html">Goto forms</a>
-  
+
+  <app-snoopa-vision></app-snoopa-vision>
+
 <%= require('../../core/parts/footer.ejs')() %>
