single page application

--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -1,5 +1,5 @@
 <%= require('../../core/parts/header.ejs')({title: 'Home'}) %>
-  <a href="forms.html">Goto forms</a>
+  <a href="#forms">Goto forms</a>
 
   <app-snoopa-vision></app-snoopa-vision>
 
