--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -1,6 +1,6 @@
-<%= require('../../core/parts/header.ejs')({title: 'Home'}) %>
-  <a href="#forms">Goto forms</a>
-
-  <app-snoopa-vision></app-snoopa-vision>
+<%= require('../../core/parts/header.ejs')({title: 'Welcome'}) %>
+  <a href="#quizz">Goto quizz</a>
+  <a href="#enroll">Goto enroll</a>
+  <a href="#hacked">Goto hacked</a>
 
 <%= require('../../core/parts/footer.ejs')() %>
