--- a/src/pages/quizz/quizz.ejs
+++ b/src/pages/quizz/quizz.ejs
@@ -4,13 +4,13 @@
 	<app-window id="q-test1" ifRight="q-test2" ifWrong="l-test1">
 		<p>Ma question ?</p>
 		<button rightAwnser>Bonne réponse ajout rover</button>
-		<button wrongAwnser>Mauvaise réponse</button>
+		<button wrongAwnser onclick="var BeDo=new Audio('assets/audio/YouCanBeDo.wav');BeDo.play();" id="holland">Mauvaise réponse</button>
 		<button rightAwnser>Autre bonne réponse</button>
 	</app-window>
 
 	<app-window id="q-test2" ifRight="q-test3" ifWrong="l-test1" hidden>
 		<p>Ma question 2 ?</p>
-		<button rightAwnser 
+		<button rightAwnser
 			onclick="RoverXpDog.append();
 			RoverXpDog.say('bonita');">
 			Bonne réponse questi
