--- a/src/shared/custom-elements/window/window.ejs
+++ b/src/shared/custom-elements/window/window.ejs
@@ -1,13 +1,13 @@
 <div class="title-bar">
-    <p class="title">Le nom de la fenêtre<!-- To be replaced by input content --></p>
+    <p class="title"><img class="icon" src="../../assets/images/bean_icon.jpg"><span>Le nom de la fenêtre<!-- To be replaced by input content --></span></p>
     <div class="controls">
-        <button class="control">
+        <button class="control" onclick="var error=new Audio('assets/audio/WindowsError.mp3');error.play();">
             _
         </button>
-        <button class="control">
+        <button class="control" onclick="var error=new Audio('assets/audio/WindowsError.mp3');error.play();">
             X
         </button>
-        <button class="control">
+        <button class="control" onclick="var error=new Audio('assets/audio/WindowsError.mp3');error.play();">
             U
         </button>
     </div>
