--- a/src/pages/quizz/quizz.scss
+++ b/src/pages/quizz/quizz.scss
@@ -1,8 +1,8 @@
 @import '../../core/scss/styles';
 @import '../../core/scss/constants';
 
-#foreground-wrapper,
-#background-wrapper {
+#background-wrapper,
+#foreground-wrapper {
   display: grid;
 }
 
@@ -12,4 +12,27 @@
   width: 100vw;
   justify-content: center;
   align-content: center;
+  background-image: url("/assets/images/bean.gif");
+  background-size: cover;
+
+  #q-test1 button:not(.control) {
+    background-position-x: 0;
+    background-position-y: 0;
+    background-repeat: repeat;
+    background-size: auto auto;
+    background-size: cover;
+    height: 150px;
+    width: 110px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    border: 3px;
+    border-bottom-color: #A8A9A8;
+    border-right-color: #A8A9A8;
+    border-top-color: #EAEAEA;
+    border-left-color: #EAEAEA;
+  }
+
+  #holland {
+    background: url("/assets/images/hollande.jpg");
+  }
 }
