--- a/src/shared/custom-elements/window/window.scss
+++ b/src/shared/custom-elements/window/window.scss
@@ -46,7 +46,7 @@ app-window {
   display: grid;
   align-content: start;
   align-self: start;
-  background-color: $base;
+  background-color: #d1f2ff;
   padding: $base-pad;
 
   @include full-shadow(2px);
@@ -59,8 +59,9 @@ app-window {
     justify-content: space-between;
     align-content: center;
     grid-gap: 30px;
-    color: $base;
-    background-color: $blue;
+    color: white;
+    text-shadow: 1px 1px 2px black, -1px 1px 2px black, 1px -1px 2px, -1px -1px 2px black;
+    background: linear-gradient(114.18deg, #00F0FF -22.29%, #FC87F0 95.68%);
     padding: $base-pad;
     height: 30px;
 
@@ -69,6 +70,11 @@ app-window {
       font-weight: bold;
       margin: 0;
       align-self: center;
+
+      .icon {
+        width: 20px;
+        margin-right: 15px;
+      }
     }
 
     .controls {
@@ -112,21 +118,27 @@ app-window {
     display: inline-grid;
     grid-template-columns: 1fr 26px;
     min-height: 250px;
+
+    .content {
+      padding: 15px;
+    }
   }
 
   // TODO
   .scroll {
     width: 26px;
-    background-color: $base-100;
+    background-color: #d7d7d7;
     display: inline-grid;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
+    align-content: space-between;
+    grid-template-rows: auto 1fr auto;
 
     .progress {
       width: 24px;
-      height: 70%;
       cursor: pointer;
+      align-self: stretch;
 
       @include full-shadow(2px);
 
