--- a/src/pages/quizz/quizz.scss
+++ b/src/pages/quizz/quizz.scss
@@ -25,7 +25,7 @@
     width: 110px;
     background-position: center center;
     background-repeat: no-repeat;
-    border: 3px;
+    border: 3px solid;
     border-bottom-color: #A8A9A8;
     border-right-color: #A8A9A8;
     border-top-color: #EAEAEA;
