utilisation du shadow root

--- a/src/shared/custom-elements/window/window.ejs
+++ b/src/shared/custom-elements/window/window.ejs
@@ -16,7 +16,9 @@
 <div class="menu-bar"><span>File</span><span>Edit</span><span>View</span><span>Help</span></div>
 
 <div class="content-container">
-    <div class="content"><!-- To be replaced by input content --></div>
+    <div class="content">
+        <slot></slot>
+    </div>
     <div class="scroll">
         <div class="start"></div>
         <div class="progress"></div>
