--- a/src/core/parts/header.ejs
+++ b/src/core/parts/header.ejs
@@ -7,3 +7,6 @@
   </head>
 
   <body>
+      <a href="#quizz">Goto quizz</a>
+      <a href="#enroll">Goto enroll</a>
+      <a href="#hacked">Goto hacked</a>
