amelioration import scss inline

--- a/src/shared/custom-elements/window/window.ejs
+++ b/src/shared/custom-elements/window/window.ejs
@@ -17,7 +17,7 @@
 
 <div class="content-container">
     <div class="content">
-        <slot></slot>
+        <slot>To be replaced by content inside the tag</slot>
     </div>
     <div class="scroll">
         <div class="start"></div>
