added iframe in hacked

--- a/src/pages/hacked/hacked.ejs
+++ b/src/pages/hacked/hacked.ejs
@@ -1,3 +1,5 @@
 <%= require('../../core/parts/header.ejs')({title: 'astnhbaoesxnktb'}) %>
  <p>Hacked page</p>
 <%= require('../../core/parts/footer.ejs')() %>
+
+<iframe src="https://geekprank.com/apple/" width="" height="" allow="fullscreen"></iframe>
