--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -1,3 +1,5 @@
 <%= require('../../core/parts/header.ejs')({title: 'Welcome'}) %>
-
+    <a href="#quizz">Goto quizz</a>
+      <a href="#enroll">Goto enroll</a>
+      <a href="#hacked">Goto hacked</a>
 <%= require('../../core/parts/footer.ejs')() %>
