trucs funs techniquements

--- a/src/pages/enroll/enroll.ejs
+++ b/src/pages/enroll/enroll.ejs
@@ -14,7 +14,7 @@
     </div>
 
     <div class="form">
-        <h1 id="form" onclick="updateCaption()">Agent submission form</h1>
+        <h1 id="form">Agent submission form</h1>
         <form>
             <h4 class="label-form">First Name: </h4><input type="text" name="fname" onchange="updateText()" onkeyup="updateText()">
             <h4 class="label-form">Last Name:</h4><input type="text" name="lname" onchange="updateText()" onkeyup="updateText()">
