--- a/src/shared/elements/overlay/overlay.scss
+++ b/src/shared/elements/overlay/overlay.scss
@@ -4,8 +4,26 @@
   z-index: 10;
   position: fixed;
   display: grid;
+  grid-auto-flow: row;
+  justify-content: center;
   height: 100vh;
   width: 100vw;
   color: white;
-  background-color: rgba($color: #000000, $alpha: 0.5);
+  background-color: rgba($color: #000, $alpha: 0.5);
+
+  #overlay-img {
+    align-self: center;
+    max-height: 150px;
+    width: auto;
+  }
+
+  #overlay-text {
+    align-self: center;
+  }
+
+  #overlay-btn {
+    justify-self: center;
+    height: 50px;
+    width: 100px;
+  }
 }
