overlay en no limit

--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -2,4 +2,9 @@
       <a href="#quizz">Goto quizz</a>
       <a href="#enroll">Goto enroll</a>
       <a href="#hacked">Goto hacked</a>
+
+      <app-overlay>
+            <p>Hello I'm the overlay</p>
+            <button>Click me</button>
+      </app-overlay>
 <%= require('../../core/parts/footer.ejs')() %>
