--- a/src/pages/quizz/quizz.ejs
+++ b/src/pages/quizz/quizz.ejs
@@ -1,14 +1,14 @@
 <%= require('../../core/parts/header.ejs')({title: 'Evaluation'}) %>
 
 <div id="foreground-wrapper">
-	<app-window id="q-test1" ifRight="q-test2" ifWrong="l-test1">
+	<app-pc-window id="q-test1" ifRight="q-test2" ifWrong="l-test1">
 		<p>Ma question ?</p>
 		<button rightAwnser>Bonne réponse ajout rover</button>
 		<button wrongAwnser onclick="var BeDo=new Audio('assets/audio/YouCanBeDo.wav');BeDo.play();" id="holland">Mauvaise réponse</button>
 		<button rightAwnser>Autre bonne réponse</button>
-	</app-window>
+	</app-pc-window>
 
-	<app-window id="q-test2" ifRight="q-test3" ifWrong="l-test1" hidden>
+	<app-pc-window id="q-test2" ifRight="q-test3" ifWrong="l-test1" hidden>
 		<p>Ma question 2 ?</p>
 		<button rightAwnser
 			onclick="RoverXpDog.append();
@@ -16,15 +16,15 @@
 			Bonne réponse questi
 		</button>
 		<button wrongAwnser>Mauvaise réponse</button>
-	</app-window>
+	</app-pc-window>
 
-	<app-window id="q-test3" hidden>
+	<app-pc-window id="q-test3" hidden>
 		<p>Ma question 3 ?</p>
 		<button rightAwnser>
 			Bonne réponse questi
 		</button>
 		<button wrongAwnser>Mauvaise réponse</button>
-	</app-window>
+	</app-pc-window>
 </div>
 
 <div id="background-wrapper">
