--- a/src/shared/custom-elements/overlay/overlay.scss
+++ b/src/shared/custom-elements/overlay/overlay.scss
@@ -1,29 +1,14 @@
 @import '../../../core/scss/constants';
 
-.overlay {
+app-overlay {
   z-index: 10;
   position: fixed;
   display: grid;
   grid-auto-flow: row;
   justify-content: center;
+  align-content: center;
   height: 100vh;
   width: 100vw;
   color: white;
   background-color: rgba($color: #000, $alpha: 0.5);
-
-  #overlay-img {
-    align-self: center;
-    max-height: 150px;
-    width: auto;
-  }
-
-  #overlay-text {
-    align-self: center;
-  }
-
-  #overlay-btn {
-    justify-self: center;
-    height: 50px;
-    width: 100px;
-  }
 }
