opp de facon plus serieuse

--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -3,7 +3,7 @@
       <a href="#enroll">Goto enroll</a>
       <a href="#hacked">Goto hacked</a>
 
-      <app-overlay id="intro-overlay" onclick="initSnoop()">
+      <app-overlay id="intro-overlay">
             <p>Congratulation, you arrived here</p>
             <button>Click me</button>
       </app-overlay>
