service pour quote + overlay block

--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -8,7 +8,7 @@
             <button>Click me</button>
       </app-overlay>
 
-      <app-overlay id="fullscreen-overlay" hidden>
+      <app-overlay id="goto-fullscreen-overlay" hidden>
             <p>You must press f11 to activate snoopavision</p>
       </app-overlay>
 <%= require('../../core/parts/footer.ejs')() %>
