suppression erreurs de build

--- a/src/pages/quizz/quizz.scss
+++ b/src/pages/quizz/quizz.scss
@@ -23,10 +23,10 @@
     width: 110px;
     background-position: center center;
     border: 3px solid;
-    border-bottom-color: #A8A9A8;
-    border-right-color: #A8A9A8;
-    border-top-color: #EAEAEA;
-    border-left-color: #EAEAEA;
+    border-bottom-color: #a8a9a8;
+    border-right-color: #a8a9a8;
+    border-top-color: #eaeaea;
+    border-left-color: #eaeaea;
   }
 
   #holland {
