--- a/src/shared/custom-elements/pc-window/pc-window.scss
+++ b/src/shared/custom-elements/pc-window/pc-window.scss
@@ -61,7 +61,7 @@ $base-pad: 4px;
     grid-gap: 30px;
     color: white;
     text-shadow: 1px 1px 2px black, -1px 1px 2px black, 1px -1px 2px, -1px -1px 2px black;
-    background: linear-gradient(114.18deg, #00F0FF -22.29%, #FC87F0 95.68%);
+    background: linear-gradient(114.18deg, #00f00f -22.29%, #fc87f0 95.68%);
     padding: $base-pad;
     height: 30px;
 
