--- a/src/shared/custom-elements/pc-window/pc-window.scss
+++ b/src/shared/custom-elements/pc-window/pc-window.scss
@@ -97,6 +97,8 @@ $base-pad: 4px;
   }
 
   .menu-bar {
+    user-select: none;
+
     span {
       padding: ($base-pad * 2);
       display: inline-block;
