window placed randomly

--- a/src/pages/enroll/enroll.ejs
+++ b/src/pages/enroll/enroll.ejs
@@ -16,15 +16,15 @@
     </div>
 
     <div id="background-wrapper">
-        <app-pc-window>
+        <app-pc-window randomPlace>
             <p>Je suis fonctinnel</p>
         </app-pc-window>
     
-        <app-pc-window>
+        <app-pc-window randomPlace>
             <p>Je suis fonctinnel</p>
         </app-pc-window>
     
-        <app-pc-window>
+        <app-pc-window randomPlace>
             <p>Je suis fonctinnel</p>
         </app-pc-window>
     </div>
