meilleure gestion fenetres

--- a/src/pages/enroll/enroll.ejs
+++ b/src/pages/enroll/enroll.ejs
@@ -17,10 +17,18 @@
 
     <div id="background-wrapper">
         <app-pc-window randomPlace>
+            <p slot="title">HAHAHA</p>
+            <p>Je suis fonctinneeuodoeudeodeeeeeeeeeeeeeeeeeeeeeeeeuiiiiiiiiiiiiiiieeeeeeeeeeeeel</p>
+            <p>Je suis fonctinnel</p>
+            <p>Je suis fonctinnel</p>
+            <p>Je suis fonctinnel</p>
+            <p>Je suis fonctinnel</p>
+            <p>Je suis fonctinnel</p>
             <p>Je suis fonctinnel</p>
         </app-pc-window>
     
         <app-pc-window randomPlace>
+            <p slot="title">Do it !</p>
             <p>Je suis fonctinnel</p>
         </app-pc-window>
     
