--- a/src/shared/custom-elements/pc-window/pc-window.scss
+++ b/src/shared/custom-elements/pc-window/pc-window.scss
@@ -43,11 +43,14 @@ $base-pad: 4px;
 
 :host {
   position: relative;
+  left: "0px";
+  top: "0px";
   display: grid;
   align-content: start;
   align-self: start;
   background-color: #d1f2ff;
   padding: $base-pad;
+  max-width: 500px;
 
   @include full-shadow(2px);
 
@@ -68,24 +71,35 @@ $base-pad: 4px;
     .title {
       pointer-events: none;
       font-weight: bold;
-      margin: 0;
-      align-self: center;
+      display: inline-grid;
+      align-content: center;
+      grid-auto-flow: column;
+      grid-gap: 15px;
 
       .icon {
-        width: 20px;
-        margin-right: 15px;
+        img {
+          width: 20px;
+          height: 20px;
+          align-self: center;
+        }
+      }
+
+      .text {
+        padding: 0;
       }
     }
 
     .controls {
       display: inline-grid;
       grid-auto-flow: column;
+      align-content: center;
 
       .control {
         width: 26px;
-        height: 22px;
+        height: 26px;
         background-color: $base;
         margin-left: $base-pad;
+        padding: 0;
 
         @include base-shadow(2px);
 
@@ -114,95 +128,12 @@ $base-pad: 4px;
     }
   }
 
-  .content-container {
+  .content {
     @include full-reverse(2px);
 
     display: inline-grid;
-    grid-template-columns: 1fr 26px;
-    min-height: 250px;
-
-    .content {
-      padding: 15px;
-    }
-  }
-
-  // TODO
-  .scroll {
-    width: 26px;
-    background-color: #d7d7d7;
-    display: inline-grid;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    align-content: space-between;
-    grid-template-rows: auto 1fr auto;
-
-    .progress {
-      width: 24px;
-      cursor: pointer;
-      align-self: stretch;
-
-      @include full-shadow(2px);
-
-      background-color: $base;
-
-      &:hover {
-        background-color: $base-hover;
-      }
-    }
-
-    .start,
-    .end {
-      width: 24px;
-      height: 22px;
-      position: relative;
-
-      @include full-shadow(2px);
-
-      background-color: $base;
-
-      @include hover-reverse;
-
-      &::after {
-        content: "";
-        display: block;
-        position: absolute;
-        width: 0;
-        height: 0;
-        top: 6px;
-        left: 4px;
-        border-top: 0;
-        border-left: 6px solid transparent;
-        border-right: 6px solid transparent;
-        border-bottom: 6px solid $default;
-      }
-    }
-
-    .end {
-      &::after {
-        transform: rotate(180deg);
-      }
-    }
-
-    &.-row {
-      flex-direction: row;
-
-      .progress {
-        width: 30%;
-        height: 24px;
-      }
-
-      .start {
-        &::after {
-          transform: rotate(-90deg);
-        }
-      }
-
-      .end {
-        &::after {
-          transform: rotate(90deg);
-        }
-      }
-    }
+    padding: 15px;
+    max-height: 200px;
+    overflow: auto;
   }
 }
