--- a/src/pages/quizz/quizz.ejs
+++ b/src/pages/quizz/quizz.ejs
@@ -30,6 +30,9 @@
 </div>
 
 <div id="background-wrapper">
+	<div id="task-bar">
+		<div id="start-button"><img src="assets/images/icons/w95-icon.png">Start</div>
+	</div>
 </div>
 
 <%= require('../../core/parts/footer.ejs')() %>
