--- a/src/shared/custom-elements/pc-window/pc-window.ejs
+++ b/src/shared/custom-elements/pc-window/pc-window.ejs
@@ -1,6 +1,6 @@
 <div class="title-bar">
     <div class="title">
-        <slot name="icon" class="icon"><img src="<%= assetsUrl %>/images/icons/bean.jpg"></slot>
+        <slot name="icon" class="icon"><img src="<%= assetsUrl %>/images/icons/w95-icon.png"></slot>
         <slot name="title" class="text"><p>Change me by adding slot="title" to a tag</p></slot>
     </div>
     <div class="controls">
