--- a/src/pages/quizz/quizz.scss
+++ b/src/pages/quizz/quizz.scss
@@ -42,6 +42,29 @@
 #background-wrapper {
   height: 100%;
   width: 100%;
-  background-image: url("/assets/images/backgrounds/bean.gif");
-  background-size: cover;
+  background-color:$default-w95-bg;
+  background-image: url("/assets/images/logos/microsoft95logo.png");
+  background-size: 175px;
+  background-position: center center;
+  background-repeat: no-repeat;
+
+  #task-bar {
+    background-color: $default-w95-window-bg;
+    height: 40px;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    border-top: $border;
+    
+    #start-button {
+      height: 95%;
+      font-weight: bold;
+      padding-left: 20px;
+      border: $border;
+
+      img {
+        height: 70%;
+      }
+    }
+  }
 }
