--- a/src/shared/custom-elements/pc-window/pc-window.scss
+++ b/src/shared/custom-elements/pc-window/pc-window.scss
@@ -1,13 +1,13 @@
 @import '../../../core/scss/constants';
 
 // colors
-$background: #ff9ae0;
+$background: #BABABA;
 $base: #c7c7c7;
 $base-hover: darken($base, 5%);
 $base-border: #fcfcfc;
 $base-shadow: #2a2a2a;
 $base-100: #d7d7d7;
-$blue: #000080;
+$blue: #04007E;
 $default: #000;
 
 // measurements
@@ -62,7 +62,7 @@ $base-pad: 4px;
     grid-gap: 30px;
     color: white;
     text-shadow: 1px 1px 2px black, -1px 1px 2px black, 1px -1px 2px, -1px -1px 2px black;
-    background: linear-gradient(114.18deg, #00f00f -22.29%, #fc87f0 95.68%);
+    background: $blue;
     padding: $base-pad;
     height: 30px;
 
